# super-email-template

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
super_email_template/: __init__.py  core.py
tests/: test_super_email_template.py
